Fixed navigation mobile controls and navigation megamenu sample pages accessibility errors

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.2 -  4/11/2019 
+ * CA State Template v5.5 -  @version v5.5.2 -  4/12/2019 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.3.1 - /source/scss/bootstrap/ 
@@ -11243,7 +11243,7 @@ code {
 
 @media (min-width: 768px) {
   .global-header .mobile-controls {
-    display: none;
+    display: none !important;
   }
 }
 
